remove support for endorsed
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>